# trading-bot

./: .env.example  .gitignore  DECISIONS.md  README.md  config.yaml  main.py  pyproject.toml
agent/: __init__.py  crypto_loop.py  loop.py
backtester/: __init__.py  cadence_comparison.py  crypto_momentum.py  dual_momentum.py  engine.py  intraday_engine.py  metrics.py  overlay_comparison.py  report.py  single_stock_comparison.py  ta_engine.py
data/: __init__.py  cache.py  earnings.py  fundamentals.py  market.py  streaming.py  timeframes.py  universe.py
docs/: digitalocean_deployment.md
evolve/: __init__.py  cli.py  cycle.py  evidence.py  families.py  guardrails.py  lifecycle.py  llm.py  monitor_live.py  promote.py  registry.py  shadow.py  validator.py
execution/: __init__.py  broker.py  orders.py
monitor/: __init__.py  notify.py  reporter.py
portfolio/: __init__.py  construction.py  position_manager.py  rebalancer.py
risk/: __init__.py  drawdown.py  kill_switch.py  limits.py
scripts/: audit_v4_2013.py  breakdown_calibration.py  confluence_calibration.py  dual_momentum_backtest.py  dual_momentum_variants.py  level_calibration.py  poc_displacement.py  relative_strength_calibration.py  stock_screener.py  trend_filter_audit.py  trend_pullback_calibration.py  yearly_breakdown.py
signals/: __init__.py  base.py  composite.py  crypto_momentum.py  dual_momentum.py  features.py  gap.py  intraday_composite.py  ml_signal.py  momentum.py  orb.py  quality.py  scoring.py  setup.py  volatility.py  vwap.py
tests/: test_breakdown_calibration.py  test_crypto_broker.py  (+18 more)
(+21 files in other folders)
