[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Autonomous factor-momentum trading bot targeting S&P 500 outperformance"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.20.0",
    "yfinance>=0.2.40",
    "polygon-api-client>=1.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pyarrow>=15.0.0",
    "loguru>=0.7.0",
    "schedule>=1.2.0",
    "httpx>=0.27.0",
    "tabulate>=0.9.0",
    "anthropic>=0.69.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "optuna>=3.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
trading-bot = "main:cli"

[tool.setuptools.packages.find]
include = ["agent*", "backtester*", "evolve*", "execution*", "monitor*", "portfolio*", "risk*", "signals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
